change console z-index, fixes virtkick/virtkick#114

--- a/app/assets/stylesheets/pages/machine/console.css.scss
+++ b/app/assets/stylesheets/pages/machine/console.css.scss
@@ -3,6 +3,7 @@
   .console-window-wrapper {
     position: absolute;
     box-sizing: border-box;
+    z-index: 999; // stack console just below bootstrap components
     
     .console-window {
       position: absolute;
